force-app/main/default/objects/Guild_Member__c/fields/Character_ID__c.field-meta.xml
<CustomField>
    <fullName>Character_ID__c</fullName>
    <externalId>true</externalId>
    <label>Character ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>