force-app/main/default/objects/Guild_Member__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Guild Members</relationshipLabel>
    <relationshipName>Guild_Members</relationshipName>
    <type>Lookup</type>
</CustomField>