force-app/main/default/objects/Guild_Member__c/fields/Faction__c.field-meta.xml
<CustomField>
    <fullName>Faction__c</fullName>
    <label>Faction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Faction</valueSetName>
    </valueSet>
</CustomField>