force-app/main/default/objects/Guild_Member__c/fields/Item_Level__c.field-meta.xml
<CustomField>
    <fullName>Item_Level__c</fullName>
    <label>Item Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>