force-app/main/default/objects/Guild_Member__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Race</label>
    <referenceTo>Race__c</referenceTo>
    <relationshipLabel>Guild Members</relationshipLabel>
    <relationshipName>Guild_Members</relationshipName>
    <type>Lookup</type>
</CustomField>