force-app/main/default/objects/Guild_Member__c/fields/Realm__c.field-meta.xml
<CustomField>
    <fullName>Realm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Realm</label>
    <referenceTo>Realm__c</referenceTo>
    <relationshipLabel>Guild Members</relationshipLabel>
    <relationshipName>Guild_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>