force-app/main/default/objects/Guild_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Faction__c</columns>
    <columns>Race__c</columns>
    <columns>Class__c</columns>
    <columns>Main_Spec__c</columns>
    <columns>Item_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>